--- a/index.html
+++ b/index.html
@@ -10,18 +10,26 @@
 
     <main class="card-component">
 
-        <img src="" alt="">
+        <img src="images/developer.png" alt="">
 
-        <h1> Will Smith </h1>
+        <h1 class="name"> Omigie E      lizabeth </h1>
 
-        <h4>Frontend Developer </h4>
+        <h1 class="job-tittle">Frontend Developer </h1>
 
-        <p> I am a frontend developer with a passion for building beautiful and user-friendly web interfaces. </p>
+        <p> I am a frontend developer with a passion for building beautiful and <br> user-friendly web interfaces. </p>
 
-        <div> 
-            <a href="">link 1</a>
-            <a href=""> link 2</a>
-            <a href="">link 3</a>
+        <div class="links"> 
+            <div>
+                <a href="https://x.com/tech_goddezz">Twitter</a>
+            </div>
+
+            <div>
+                <a href="www.linkedin.com/in/elizabethomigie">Linkedin</a>
+            </div>
+
+            <div>
+                <a href="https://github.com/tech-goddezz">Github</a> 
+            </div>
         </div>
 
         <button> Follow </button>
