--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <img src="images/developer.png" alt="">
 
-        <h1 class="name"> Omigie E      lizabeth </h1>
+        <h1 class="name"> Omigie Elizabeth </h1>
 
         <h1 class="job-tittle">Frontend Developer </h1>
 
@@ -20,19 +20,19 @@
 
         <div class="links"> 
             <div>
-                <a href="https://x.com/tech_goddezz">Twitter</a>
+                <a href="https://x.com/tech_goddezz" target="_blank" rel="noopener noreferrer">Twitter</a>
             </div>
 
             <div>
-                <a href="www.linkedin.com/in/elizabethomigie">Linkedin</a>
+                <a href="www.linkedin.com/in/elizabethomigie" target="_blank" rel="noopener noreferrer">Linkedin</a>
             </div>
 
             <div>
-                <a href="https://github.com/tech-goddezz">Github</a> 
+                <a href="https://github.com/tech-goddezz" target="_blank" rel="noopener noreferrer">Github</a> 
             </div>
         </div>
 
-        <button> Follow </button>
+        <a href="https://x.com/tech_goddezz" target="_blank" rel="noopener noreferrer"><button> Follow </button></a>
 
 
     </main>
