--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <main class="card-component">
 
-        <img src="images/developer.png" alt="">
+        <a href="https://www.linkedin.com/in/elizabethomigie" target="_blank" rel="noopener noreferrer"><img src="images/developer.png" alt="profile" ></a>
+        
 
         <h1 class="name"> Omigie Elizabeth </h1>
 
@@ -24,7 +25,7 @@
             </div>
 
             <div>
-                <a href="www.linkedin.com/in/elizabethomigie" target="_blank" rel="noopener noreferrer">Linkedin</a>
+                <a href="https://www.linkedin.com/in/elizabethomigie" target="_blank" rel="noopener noreferrer">Linkedin</a>
             </div>
 
             <div>
